More work on FilterDefs - added the FilterClauseOperator option.  Also refactored.  Adding tests to the StringTextBoxFilter et al since they are not tested in isolation.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="FilterController\TestFilterControlBuilder.cs" />
+    <Compile Include="FilterController\TestStringTextBoxFilter.cs" />
     <Compile Include="PanelBuilder\TestPanelBuilder.cs" />
     <Compile Include="PanelBuilder\TestPanelInfo.cs" />
     <Compile Include="TestButton.cs" />
