(Merged from 2.1 rev 4529,4533) Added PersonTestBO to help in the testing of the GridAndBOEditor control. Made changes to OrganisationTestBO to help testing of the GridAndBOEditor control. Added a failing test to TestPanelBuilder for the case when you have both a row and col span and the grid size is not calculating correctly. Added the GridAndBOEditor Control and the ExtendedComboBoxMapper and ExtendedComboBox control. Also made an PictureBoxWin as a call through to the System.Windows.Forms PictureBox, this was required for Hilti. Added DateTimePickerMapperStrategy so added the ValueChanged event on the DateTimePicker. Changed GridLayoutManager to throw the correct error when a control is added past the end of what is expected (i.e a 5th control added to a 2x2 grid).

--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -68,10 +68,16 @@
     <Compile Include="ControlInterfaces\IFormHabanero.cs" />
     <Compile Include="ControlInterfaces\IGridWithPanelControl.cs" />
     <Compile Include="ControlInterfaces\IListControl.cs" />
+    <Compile Include="ControlInterfaces\IPictureBox.cs" />
     <Compile Include="ControlInterfaces\IStaticDataEditor.cs" />
     <Compile Include="ControlInterfaces\IUserControlHabanero.cs" />
     <Compile Include="ControlMappers\ComboBoxCollectionSelector.cs" />
     <Compile Include="ControlMappers\DateTimePickerMapper.cs" />
+    <Compile Include="ControlMappers\ExtendedComboBoxMapper.cs" />
+    <Compile Include="IBOEditorPanel.cs" />
+    <Compile Include="IBusinessObjectControlWithErrorDisplay.cs" />
+    <Compile Include="IGridAndBOEditorControl.cs" />
+    <Compile Include="IExtendedComboBox.cs" />
     <Compile Include="DateTimePicker\DateTimePickerManager.cs" />
     <Compile Include="FilterControl\FilterControlBuilder.cs" />
     <Compile Include="FilterControl\StringTextBoxFilter.cs" />
