--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -208,6 +208,7 @@
     <Compile Include="TestBusinessObjectManager.cs" />
     <Compile Include="CriteriaManager\TestCriteria.cs" />
     <Compile Include="BusinessObjectLoader\TestQueryBuilderWithInheritance.cs" />
+    <Compile Include="TestPack\PersonTestBO.cs" />
     <Compile Include="BusinessObjectLoader\TestSource_Join.cs" />
     <Compile Include="BusinessObjectLoader\TestSource_JoinList.cs" />
     <Compile Include="BusinessObjectLoader\TestSqlFormatter.cs" />
