(merge from trunk) Added Sherwin's amendments to support parameters on form fields.  Needed lots of conflict resolution, but all the tests are passing.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -86,6 +86,8 @@
     <Compile Include="TestComboBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="TestEnumerationConverter.cs" />
+    <Compile Include="TestEnumerations.cs" />
     <Compile Include="TestExtendedComboBox.cs" />
     <Compile Include="TestForm.cs" />
     <Compile Include="TestGridAndBOEditorControl.cs" />
