--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{04E4FF45-6C20-46EB-A9AD-2B04895F6218}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -92,6 +92,7 @@
     <Compile Include="EditableGridVWG.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="EnumerationConverter.cs" />
     <Compile Include="ErrorProviderVWG.cs" />
     <Compile Include="FileChooserVWG.cs">
       <SubType>UserControl</SubType>
