Added SizeMode and Image to IPictureBox.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -103,6 +103,7 @@
     <Compile Include="TestGridAndBOEditorControl.cs" />
     <Compile Include="TestGroupBox.cs" />
     <Compile Include="TestNumericUpDown.cs" />
+    <Compile Include="TestPictureBox.cs" />
     <Compile Include="TestProgressBar.cs" />
     <Compile Include="TestRadioButton.cs" />
     <Compile Include="TestSplitter.cs" />
