--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="FilterController\TestFilterControlBuilder.cs" />
+    <Compile Include="FilterController\TestFilterControlManager.cs" />
     <Compile Include="FilterController\TestStringTextBoxFilter.cs" />
     <Compile Include="Grid\TestDataGridView.cs" />
     <Compile Include="Mappers\TestExtendedLookupComboBoxMapper.cs" />
