Created an EditableGridControlMapper.  Added the Layout field to the xml for UIFormField

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -87,6 +87,7 @@
     <Compile Include="FilterController\TestFilterControlManager.cs" />
     <Compile Include="FilterController\TestStringTextBoxFilter.cs" />
     <Compile Include="Grid\TestDataGridView.cs" />
+    <Compile Include="Mappers\TestEditableGridMapper.cs" />
     <Compile Include="Mappers\TestExtendedLookupComboBoxMapper.cs" />
     <Compile Include="PanelBuilder\TestPanelBuilder.cs" />
     <Compile Include="PanelBuilder\TestPanelInfo.cs" />
