Added capabilities to persist (save and load) the DataStoreInMemory

--- a/source/Habanero.Test/Habanero.Test.csproj
+++ b/source/Habanero.Test/Habanero.Test.csproj
@@ -100,6 +100,7 @@
     <Compile Include="TestUtil.cs" />
     <Compile Include="Util\TestConfigFileSettings.cs" />
     <Compile Include="Util\TestDateTimeUtilities.cs" />
+    <Compile Include="Util\TestFileUtilities.cs" />
     <Compile Include="Util\TestReflectionUtilities.cs" />
     <Compile Include="Util\File\CsvTestsSamples.cs" />
     <Compile Include="Util\File\TestCsvFileReader.cs" />
