--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Grid\DataGridViewNumericUpDownColumnWin.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Grid\DataGridViewSelectionModeWin.cs" />
     <Compile Include="Grid\DataGridViewWin.cs">
       <SubType>Component</SubType>
     </Compile>
