(Merge from branch 2.2, revisions 5138-5182): [5182] (No Comment) [5173] Checked in missing file. [5162] Started work on MessageBoxConfirmer. [5157] Fixed issues with DataGridViewSelectionMode in VWG and Win. [5154] Added tests for reading a decimal value with an integer BOProp. A decimal value will be rounded to get the integer value. [5138] (No Comment)
**(Custom Changes)
Fixed some doc comments

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -113,6 +113,7 @@
     <Compile Include="Loaders\TestXmlFilterLoader.cs" />
     <Compile Include="Loaders\TestXmlSimpleLookupListLoader.cs" />
     <Compile Include="TestBOObjectID.cs" />
+    <Compile Include="TestBOPropInteger.cs" />
     <Compile Include="TestBOSerialisation.cs" />
     <Compile Include="TestBOStatus.cs" />
     <Compile Include="TestPack\BOWithIntID.cs" />
