--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -105,6 +105,7 @@
     </Compile>
     <Compile Include="TestGridAndBOEditorControl.cs" />
     <Compile Include="TestGroupBox.cs" />
+    <Compile Include="TestMessageBoxConfirmer.cs" />
     <Compile Include="TestNumericUpDown.cs" />
     <Compile Include="TestPictureBox.cs" />
     <Compile Include="TestProgressBar.cs" />
