Moved CollapsiblePanel from AssetManagment to Habanero

--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -196,6 +196,9 @@
     <Compile Include="TextBoxVWG.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="CollapsiblePanel\CollapsiblePanelVWG.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ToBeGeneralised\TabControlVWG.cs">
       <SubType>Component</SubType>
     </Compile>
