Moved around some methods on the Grid Control interfaces and added some specialisations to the interfaces for each type. Moved EditableGrid and EditableGridControl to the correct folder for Win and VWG.

--- a/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
+++ b/source/Habanero.UI.VWG/Habanero.UI.VWG.csproj
@@ -92,10 +92,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DockStyleVWG.cs" />
-    <Compile Include="EditableGridControlVWG.cs">
+    <Compile Include="Grid\EditableGridControlVWG.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="EditableGridVWG.cs">
+    <Compile Include="Grid\EditableGridVWG.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="EnumerationConverter.cs" />
