--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -93,10 +93,10 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="DockStyleWin.cs" />
-    <Compile Include="EditableGridControlWin.cs">
+    <Compile Include="Grid\EditableGridControlWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="EditableGridWin.cs">
+    <Compile Include="Grid\EditableGridWin.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ErrorDescriptionForm.cs">
