--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Loaders\TestXmlFilterLoader.cs" />
     <Compile Include="Loaders\TestXmlSimpleLookupListLoader.cs" />
     <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Aggregation.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Composition.cs" />
     <Compile Include="TestBOObjectID.cs" />
     <Compile Include="TestBOPropInteger.cs" />
     <Compile Include="TestBOSerialisation.cs" />
