--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -89,10 +89,9 @@
     <Compile Include="ControlMappers\ListComboBoxMapper.cs" />
     <Compile Include="Selectors\IBOSelector.cs" />
     <Compile Include="GroupBoxGroupControlManager.cs" />
-    <Compile Include="IBOEditorPanel.cs" />
-    <Compile Include="IBusinessObjectControlWithErrorDisplay.cs" />
-    <Compile Include="IGridAndBOEditorControl.cs" />
-    <Compile Include="IExtendedComboBox.cs" />
+    <Compile Include="IBOEditorControl.cs" />
+    <Compile Include="IBOSelectorAndEditor.cs" />
+    <Compile Include="ControlInterfaces\IExtendedComboBox.cs" />
     <Compile Include="DateTimePicker\DateTimePickerManager.cs" />
     <Compile Include="FilterControl\FilterControlBuilder.cs" />
     <Compile Include="FilterControl\StringTextBoxFilter.cs" />
@@ -130,7 +129,6 @@
     <Compile Include="IErrorProvider.cs" />
     <Compile Include="IFormControl.cs" />
     <Compile Include="IFormController.cs" />
-    <Compile Include="IListView.cs" />
     <Compile Include="IMainMenuHabanero.cs" />
     <Compile Include="IMenuBuilder.cs" />
     <Compile Include="IMenuItem.cs" />
@@ -141,12 +139,10 @@
     <Compile Include="IOKCancelDialogFactory.cs" />
     <Compile Include="PanelBuilder\IPanelInfo.cs" />
     <Compile Include="LayoutManagers\ColumnLayoutManager.cs" />
-    <Compile Include="IListViewItem.cs" />
-    <Compile Include="IListViewItemCollection.cs" />
-    <Compile Include="ISelectedListViewItemCollection.cs" />
+    <Compile Include="Selectors\IBOListViewSelector.cs" />
     <Compile Include="PanelBuilder\PanelBuilder.cs" />
     <Compile Include="PanelBuilder\PanelInfo.cs" />
-    <Compile Include="ReadOnlyGridButtonsControlManager.cs" />
+    <Compile Include="Grid\ReadOnlyGridButtonsControlManager.cs" />
     <Compile Include="Selectors\ComboBoxCollectionSelector.cs" />
     <Compile Include="Selectors\IBOCollapsiblePanelSelector.cs" />
     <Compile Include="Selectors\IBOComboBoxSelector.cs" />
