--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Selectors\TestGridSelector.cs" />
     <Compile Include="Selectors\TestListBoxSelector.cs" />
     <Compile Include="Selectors\TestReadOnlyGridControlSelector.cs" />
+    <Compile Include="TestBOSelectorAndBOEditorManager.cs" />
     <Compile Include="TestGroupBoxGroupControl.cs" />
     <Compile Include="TestBusinessObjectControl.cs" />
     <Compile Include="TestCollapsiblePanel.cs" />
