Completed work on the MessageBoxConfirmer. Started work on the ConfirmingBusinessObjectDeletor. Added implementations for sorting for the IDataGridView interface.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -97,6 +97,7 @@
     <Compile Include="TestComboBox.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="TestConfirmingBusinessObjectDeletor.cs" />
     <Compile Include="TestExtendedComboBox.cs" />
     <Compile Include="TestEnumerationConverter.cs" />
     <Compile Include="TestEnumerations.cs" />
