Created Tests for IBOSelectorEditableGridControlWin Fixed some documentation issues. Created IBusinessObjectList with the objective that instead of using IList or IList<BusinessObject> we will use IListBusinessObject Can then create a Generic of this for IListBusinessObject<DMProperty> etc

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -117,6 +117,7 @@
     <Compile Include="IBusinessObject.cs" />
     <Compile Include="IBusinessObjectCollection.cs" />
     <Compile Include="IBusinessObjectDeletor.cs" />
+    <Compile Include="IBusinessObjectList.cs" />
     <Compile Include="IClassDef.cs" />
     <Compile Include="IBusinessObjectUpdateLog.cs" />
     <Compile Include="IConcurrencyControl.cs" />
