--- a/source/Habanero.UI.Win/Habanero.UI.Win.csproj
+++ b/source/Habanero.UI.Win/Habanero.UI.Win.csproj
@@ -217,6 +217,7 @@
     <Compile Include="..\Common\AssemblyInfoShared.cs">
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
+    <Compile Include="Util\DialogUtilities.cs" />
     <Compile Include="Wizard\MessageWizardStepWin.cs">
       <SubType>UserControl</SubType>
     </Compile>
