Marked Restore() and Delete() obsolete on IBusinessObject. Changed DataSetProvider to Update the row always when BO.Upated event is fired. DefaultBODeletor now CancelsEdits if the Save Fails. Cleaned up some Obsolete method usages. Added tests for DefaultBODeletor.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -83,6 +83,7 @@
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
+    <Compile Include="TestBusinessObjectDeletor.cs" />
     <Compile Include="TestCollapsiblePanel.cs" />
     <Compile Include="FilterController\TestFilterControlBuilder.cs" />
     <Compile Include="FilterController\TestFilterControlManager.cs" />
