(Merge from branch 2.2, revisions 5339-5383): [5383] Marked Restore() and Delete() obsolete on IBusinessObject. Changed DataSetProvider to Update the row always when BO.Upated event is fired. DefaultBODeletor now CancelsEdits if the Save Fails. Cleaned up some Obsolete method usages. Added tests for DefaultBODeletor. [5351] Ignored and marked failing tests for action. Separated ConfirmingBusinessObjectDeletor into Habanero.Base. [5349] Completed work on ConfirmingBusinessObjectDeletor and MessageBoxConfirmer. [5339] Completed work on the MessageBoxConfirmer. Started work on the ConfirmingBusinessObjectDeletor. Added implementations for sorting for the IDataGridView interface.

--- a/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
+++ b/source/Habanero.Test.UI.Base/Habanero.Test.UI.Base.csproj
@@ -84,6 +84,7 @@
     </Compile>
     <Compile Include="ButtonsControl\TestButtonGroupControl.cs" />
     <Compile Include="Controllers\TestBOColTabControlManager.cs" />
+    <Compile Include="TestBusinessObjectDeletor.cs" />
     <Compile Include="Controllers\TestListBoxCollectionManager.cs" />
     <Compile Include="Selectors\TestBOSelector.cs" />
     <Compile Include="Selectors\TestBOTabControlSelector.cs" />
@@ -112,6 +113,7 @@
     <Compile Include="TestCollapsiblePanelGroupControlWin.cs" />
     <Compile Include="TestComboBox.cs">
     </Compile>
+    <Compile Include="TestConfirmingBusinessObjectDeletor.cs" />
     <Compile Include="TestExtendedComboBox.cs" />
     <Compile Include="TestEnumerationConverter.cs" />
     <Compile Include="TestEnumerations.cs" />
