--- a/source/Habanero.UI.Base/Habanero.UI.Base.csproj
+++ b/source/Habanero.UI.Base/Habanero.UI.Base.csproj
@@ -63,6 +63,7 @@
     </Compile>
     <Compile Include="ComboBoxManager.cs" />
     <Compile Include="ButtonGroupControlManager.cs" />
+    <Compile Include="ConfirmingBusinessObjectDeletor.cs" />
     <Compile Include="ControlFactoryManager.cs" />
     <Compile Include="ControlInterfaces\Events.cs" />
     <Compile Include="ControlInterfaces\IBOColTabControl.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="ControlMappers\EditableGridControlMapper.cs" />
     <Compile Include="ControlMappers\ExtendedComboBoxMapper.cs" />
     <Compile Include="ControlMappers\ListComboBoxMapper.cs" />
+    <Compile Include="Delegates.cs" />
     <Compile Include="Selectors\IBOSelectorControl.cs" />
     <Compile Include="GroupBoxGroupControlManager.cs" />
     <Compile Include="IBOEditorControl.cs" />
@@ -138,6 +140,7 @@
     <Compile Include="InputFormDate.cs" />
     <Compile Include="InputFormTextBox.cs" />
     <Compile Include="IOKCancelDialogFactory.cs" />
+    <Compile Include="MessageBoxConfirmer.cs" />
     <Compile Include="PanelBuilder\IPanelInfo.cs" />
     <Compile Include="LayoutManagers\ColumnLayoutManager.cs" />
     <Compile Include="Selectors\IBOListViewSelector.cs" />
